examples/test/testpolicy2033.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2033
  namespace: namespace210
spec:
  podSelector:
    matchLabels:
      key43: value18
      key16: value16
      key36: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value36
          key37: value48
      podSelector:
        matchLabels:
          key34: value43
          key28: value29
          key4: value47
